<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.Weather.CardView.Location.Item">

    <LinearLayout
        style="@style/Widget.Weather.LinearLayout.LocationItem">

        <ImageView
            style="@style/Widget.Weather.ImageView.LocationIcon"
            app:tint="@color/blue_400" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/spacing_sm">

            <TextView
                android:id="@+id/tvCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_city_name"
                style="@style/TextAppearance.Weather.CityName" />

            <TextView
                android:id="@+id/tvCondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_condition"
                style="@style/TextAppearance.Weather.CityCondition" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_temperature"
            style="@style/TextAppearance.Weather.CityTemp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>