<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.Weather.Layout.CoordinatorLayout">

    <androidx.core.widget.NestedScrollView
        style="@style/Widget.Weather.Layout.NestedScrollView">

        <LinearLayout
            style="@style/Widget.Weather.Layout.LinearLayout.Vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/locations"
                style="@style/TextAppearance.Weather.ScreenTitle"
                android:layout_marginBottom="@dimen/spacing_lg" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_lg"
                style="@style/Widget.Weather.TextInputLayout.Search"
                app:startIconDrawable="@drawable/ic_search"
                app:startIconTint="@color/gray_400">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSearchCity"
                    style="@style/Widget.Weather.TextInputEditText.Search"
                    android:hint="@string/search_city" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvLocations"
                style="@style/Widget.Weather.RecyclerView.Weight"
                android:layout_marginBottom="@dimen/spacing_md"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddLocation"
                style="@style/Widget.Weather.MaterialButton.AddLocation"
                android:text="@string/add_location" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>