<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.Weather.Layout.ScrollView">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/Widget.Weather.Layout.ConstraintLayout.Padding">

        <TextView
            android:id="@+id/tv_location"
            style="@style/TextAppearance.Weather.LocationTitle"
            android:text="@string/placeholder_city_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_date"
            style="@style/TextAppearance.Weather.Date"
            android:layout_marginTop="@dimen/spacing_xs"
            app:layout_constraintTop_toBottomOf="@id/tv_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/iv_weather_icon"
            style="@style/Widget.Weather.ImageView.WeatherIcon"
            app:tint="@color/blue_400"
            android:layout_marginTop="@dimen/spacing_xl"
            app:layout_constraintTop_toBottomOf="@id/tv_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_temperature"
            style="@style/TextAppearance.Weather.Temperature"
            android:text="@string/placeholder_temperature"
            android:layout_marginTop="@dimen/spacing_md"
            app:layout_constraintTop_toBottomOf="@id/iv_weather_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_condition"
            style="@style/TextAppearance.Weather.Condition"
            android:layout_marginTop="@dimen/spacing_sm"
            app:layout_constraintTop_toBottomOf="@id/tv_temperature"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_high_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_high_low"
            style="@style/TextAppearance.Weather.HighLow"
            android:layout_marginTop="@dimen/spacing_xs"
            app:layout_constraintTop_toBottomOf="@id/tv_condition"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/divider"
            style="@style/Widget.Weather.View.Divider"
            android:layout_marginTop="@dimen/spacing_xl"
            app:layout_constraintTop_toBottomOf="@id/tv_high_low"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/grid_weather_details"
            style="@style/Widget.Weather.GridLayout.WeatherDetails"
            android:layout_marginTop="@dimen/spacing_lg"
            app:columnCount="2"
            app:rowCount="3"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <include
                android:id="@+id/humidity_detail"
                layout="@layout/item_weather_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"
                app:layout_gravity="fill" />

            <include
                android:id="@+id/wind_detail"
                layout="@layout/item_weather_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"
                app:layout_gravity="fill" />

            <include
                android:id="@+id/rain_detail"
                layout="@layout/item_weather_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"
                app:layout_gravity="fill" />

            <include
                android:id="@+id/visibility_detail"
                layout="@layout/item_weather_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"
                app:layout_gravity="fill" />

            <include
                android:id="@+id/sunrise_detail"
                layout="@layout/item_weather_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"
                app:layout_gravity="fill" />

            <include
                android:id="@+id/sunset_detail"
                layout="@layout/item_weather_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"
                app:layout_gravity="fill" />

        </androidx.gridlayout.widget.GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>